tests/valid/borrow/multiple_shared.facet
fn multiple_shared(x: unrestricted isize) -> unrestricted isize {
    let v1: unrestricted isize = (*(&x)) in
    (*(&x))
}
