tests/invalid/borrow_error/deref_linear_ref.facet
fn bad(x: linear isize) -> linear isize {
    let r: unrestricted &linear isize = (&x) in
    (*r)
}
